# bigmodel-hub

./: .gitignore  CLI.md  Dockerfile  LICENSE  README-zh.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
bmhub/: __init__.py  backend_hf.py  backend_ms.py  cli.py  schema.py  utils.py
bmhub/backend/: hf.py  ms.py  schema.py
