[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
dynamic = ["version", "description"]
name = "bigmodel-hub"
readme = "README.md"
requires-python = ">=3.11,<4"
license = { file = "LICENSE" }
authors = [{ name = "Shihong Yan", email = "yansh97@foxmail.com" }]
keywords = ["Big Model", "LLM", "Hugging Face", "ModelScope"]
dependencies = [
    "setuptools",
    "pydantic",
    "huggingface_hub",
    "modelscope",
    "typer",
    "rich",
]

[project.optional-dependencies]
cli = ["huggingface_hub[cli]"]

[project.urls]
Homepage = "https://github.com/yansh97/bigmodel-hub"

[project.scripts]
bmhub = "bmhub.cli:main"

[tool.flit.module]
name = "bmhub"

[tool.flit.sdist]
include = ["CLI.md", "README-zh.md"]
exclude = ["**/.DS_Store"]

[tool.isort]
profile = 'black'
